# agents

livekit-agents/livekit/agents/voice/: agent_activity.py
livekit-plugins/livekit-plugins-google/livekit/plugins/google/realtime/: realtime_api.py
livekit-plugins/livekit-plugins-hamsa/: README.md  pyproject.toml
livekit-plugins/livekit-plugins-hamsa/livekit/plugins/hamsa/: __init__.py  tts.py
